--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pandas==1.3.0
-streamlit==1.11.0
-plotly==5.11.0
-altair<5
+pandas==1.3.0;
+streamlit==1.12.2;
+plotly==5.11.0;
+scipy==1.6.2;
+altair<5;
