--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas==1.3.0;
-streamlit==1.12.2;
-plotly==5.11.0;
-numpy==1.26.4;
-Python==3.11.7;
+pandas==2.0.3
+scipy==1.11.1
+streamlit==1.25.0
+altair==5.0.1
+plotly==5.15.0
